# recommendation-quiz

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  lighthouse.yml
apps/api/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
apps/api/apps/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
apps/api/apps/catalog/management/commands/: seed_catalog.py
apps/api/apps/catalog/migrations/: 0001_initial.py
apps/api/apps/quiz/: admin.py  exceptions.py  middleware.py  models.py  serializers.py  urls.py  views.py
apps/api/apps/quiz/migrations/: 0001_initial.py
apps/api/apps/recommend/: apps.py  models.py  scoring.py  serializers.py  service.py  urls.py  views.py
apps/api/apps/recommend/management/commands/: seed_variants.py
apps/api/apps/recommend/migrations/: 0001_initial.py
apps/api/config/: settings.py  urls.py  wsgi.py
apps/api/tests/: conftest.py  factories.py  test_breakdown.py  test_middleware.py  test_quiz_endpoints.py  test_scoring.py  test_scoring_properties.py  test_seed_command.py  test_variant_admin.py  test_variants.py
apps/web/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: ErrorState.tsx  Layout.tsx  ProductCard.tsx  QuizStep.tsx  Spinner.tsx
apps/web/src/lib/: api.ts  storage.ts
apps/web/src/pages/: LandingPage.tsx  QuizPage.tsx  ResultsPage.tsx
apps/web/src/tests/: ProductCard.test.tsx  QuizStep.test.tsx  api.test.ts  components.test.tsx  format.test.ts  setup.ts  storage.test.ts
bench/: load.py
bench/baselines/: baseline-in-process.json
infra/aws/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: seed.py
(+1 files in other folders)
